# marinara

./: README.md  app.py  marinara-app.py  pyproject.toml
assets/: main.css
pages/: component.py  driver.py  pipeline.py  status.py
src/marinara/: app.py
src/marinara/assets/: main.css
src/marinara/pages/: component.py  device.py  pipeline.py
