[build-system]
requires = ["setuptools >= 61.0", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "marinara"
authors = [
    {name = "Peter Kraus"},
]
maintainers = [
    {name = "Peter Kraus", email = "peter.kraus@tu-berlin.de"},
]
description = "a dashboard for tomato"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.10"
dependencies = [
    "tomato >= 2.0",
    "dash >= 2.18",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "tomato-example-counter >= 2.0.1",
    "tomato-psutil >= 1.0.0",
]
docs = [
    "sphinx ~= 7.2",
    "sphinx-rtd-theme ~= 1.3.0",
    "autodoc-pydantic ~= 2.1",
    "sphinxcontrib-mermaid ~= 0.9.2",
]

[project.urls]
Issues = "https://github.com/dgbowl/marinara/issues"
Repository = "https://github.com/dgbowl/marinara/"

[project.scripts]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.post{ccount}"
dirty_template = "{tag}.post{ccount}+dirty"

[tool.ruff]

[tool.pytest.ini_options]
